# italian_our_world_data

./: .gitignore  README.md  check_available_ds_istat.py  clean_push_dataset.py  download_cleaned_dataset_inps.py  list_datasets_inps.py  pyproject.toml  requirements.txt  test_db.py
.github/workflows/: publish.yml  tests.yml
ECB/: Retrieve_ECB_data.py
EUROSTAT/: Retrieve_EUROSTAT_data.py
FRED/: Retrieve_FRED_data.py
INPS/: download_cleaned_dataset_inps.py  list_datasets_inps.py
ISTAT/: check_available_ds_istat.py  clean_push_dataset.py  utils.py
OECD/: Retrieve_OECD_data.py
PNRR/: extract_datasets_pnrr.py
TEST_SDMX/: available_datasets_sdmx.py  test_pipeline.py  test_sdmx.py
WORLD_BANK/: Retrieve_WB_data.py
docs/: API.md  RELEASING.md
examples/: README.md
examples/ameco/: retrieve_ameco_data.py
examples/bankitalia/: retrieve_bds_catalogue.py  retrieve_exchange_rates.py
examples/bdap/: list_bdap_datasets.py
examples/bis/: retrieve_bis_data.py
examples/ckan/: retrieve_national_open_data.py
examples/ecb/: retrieve_ecb_data.py
examples/eurostat/: retrieve_eurostat_data.py
examples/fred/: retrieve_fred_data.py
examples/gateway/: unified_access.py
examples/imf/: retrieve_imf_data.py
examples/inps/: download_dataset.py  list_datasets.py
examples/istat/: retrieval_import.py  retrieve_dataset.py  retrieve_for_storage.py
examples/oecd/: retrieve_oecd_data.py
examples/opencoesione/: retrieve_opencoesione_data.py
examples/pnrr/: retrieve_pnrr_data.py
examples/sdmx/: istat_sdmx_example.py  sdmx_pipeline_example.py  sdmx_retrievers.py
examples/socrata/: retrieve_lombardy_data.py
examples/un_population/: list_un_population_indicators.py
italian_our_world_data/: __init__.py  __main__.py  _common.py  cli.py  gateway.py  geo.py  sources.py  verify.py
tests/: test_gateway.py  test_sources.py
(+1 files in other folders)
